--- a/01_nota0-10.html
+++ b/01_nota0-10.html
@@ -6,11 +6,16 @@
     */
 
     //Entrada
+    nota = Number(prompt(`Informe uma nota de 0 - 10`))
 
 
     //Processamento
+    while(isNaN(nota) || nota < 0 || nota > 10){
+        nota = Number(prompt(`Informe uma nota de 0 - 10`))
+    }
 
 
     //Saída
+    document.write(`A nota é ${nota}`)
 
 </script>
