--- a/04_aumentoPopulacao.html
+++ b/04_aumentoPopulacao.html
@@ -6,11 +6,17 @@
     */
 
     //Entrada
+    let popA = 10000
+    let popB = 200000
+    let anos = 0
 
+    while (popA <= popB){
+        popB = popB + (popB*0.015);
+        popA = popA + (popA*0.03);
+        anos++
+    }
 
-    //Processamento
+    alert(`Vai levar ${anos} anos para o país A passar o país B `)
 
-
-    //Saída
-
+    
 </script>
